// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`top-nav/presenters/LogoPresenter dangerously sets inner HTML 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

<div
  className="emotion-0"
  dangerouslySetInnerHTML={
    Object {
      "__html": "hi",
    }
  }
/>
`;

exports[`top-nav/presenters/LogoPresenter renders as a link when a link is provided 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

<a
  className="emotion-0"
  href="https://autodesk.com"
/>
`;

exports[`top-nav/presenters/LogoPresenter renders attributes for a11y 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

<div
  aria-label="a11y label"
  className="emotion-0"
  title="a11y title"
/>
`;

exports[`top-nav/presenters/LogoPresenter renders children that are strings with semantic markup 1`] = `
.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 28px;
  font-weight: 400;
  line-height: 1.285714286;
  margin: 0;
  text-align: initial;
}

<div
  className="emotion-1"
>
  <h1
    className="emotion-0"
    style={
      Object {
        "display": "inline-block",
        "fontSize": "16px",
        "fontWeight": 400,
        "lineHeight": "16px",
        "margin": 0,
      }
    }
  >
    Autodesk HIG
  </h1>
</div>
`;

exports[`top-nav/presenters/LogoPresenter renders with child components 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

<div
  className="emotion-0"
>
  <span
    data-test="child-component"
  />
</div>
`;

exports[`top-nav/presenters/LogoPresenter renders without props 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
}

<div
  className="emotion-0"
/>
`;
